11-acc-system/templates/istio/istio-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: istio-egressgateway
  namespace: acc-system
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http2
    port: 80
    protocol: TCP
    targetPort: 8080
  - name: https
    port: 443
    protocol: TCP
    targetPort: 8443
  selector:
    app: istio-egressgateway
    istio: egressgateway
  sessionAffinity: None
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway
  namespace: acc-system
spec:
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: status-port
    nodePort: 32601
    port: 15021
    protocol: TCP
    targetPort: 15021
  - name: http2
    nodePort: 31535
    port: 80
    protocol: TCP
    targetPort: 8080
  - name: https
    nodePort: 31723
    port: 443
    protocol: TCP
    targetPort: 8443
  - name: tcp
    nodePort: 32408
    port: 31400
    protocol: TCP
    targetPort: 31400
  - name: tls
    nodePort: 31576
    port: 15443
    protocol: TCP
    targetPort: 15443
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  sessionAffinity: None
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: istiod
  namespace: acc-system
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: grpc-xds
    port: 15010
    protocol: TCP
    targetPort: 15010
  - name: https-dns
    port: 15012
    protocol: TCP
    targetPort: 15012
  - name: https-webhook
    port: 443
    protocol: TCP
    targetPort: 15017
  - name: http-monitoring
    port: 15014
    protocol: TCP
    targetPort: 15014
  selector:
    app: istiod
    istio: pilot
  sessionAffinity: None
  type: ClusterIP
